# job-analyzer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/app/: database.py  main.py  models.py  scheduler.py  schemas.py
backend/app/routes/: jobs.py  scrape.py  trends.py
backend/app/services/: nlp.py  scraper.py
backend/scraper/: linkedin.py
backend/tests/: conftest.py  test_api.py  test_nlp.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  jobs.ts
frontend/src/components/: CompaniesChart.tsx  JobTable.tsx  RolesChart.tsx  SkillHistoryChart.tsx  SkillsChart.tsx
